--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,5 +1,5 @@
 $main-font: 'Ruda', Arial, sans-serif;
 $main-color: #000;
 $body-color: #363636;
-$app-bg-color: #fff;
+$app-bg-color: rgb(244, 244, 244);
 $details: #f5b042;
