--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -5,8 +5,8 @@
   justify-content: center;
   margin: 1% auto;
   &__link{
-    padding: 10px 20px;
-    font-size: 1.1vw;
+    padding: 0.5em 1em;
+    font-size: 1.2em;
     font-weight: 800;
     border-bottom: 2px solid transparent;
     transition: .3s ease-in-out;
