--- a/src/styles/myFooter.scss
+++ b/src/styles/myFooter.scss
@@ -1,6 +1,7 @@
 @import './variable.scss';
 
 .myFooter {
+  margin-bottom: 2em;
   text-align: center;
   font-size: 0.8em;
   color: $secondary-color;
