--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -3,3 +3,8 @@ $main-color: #000;
 $body-color: #363636;
 $secondary-color: #f3f3f3;
 $details: #f5b042;
+$highlighted: #62018f;
+
+@mixin margin {
+  margin: 1em auto;
+}
