--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -4,6 +4,7 @@ $body-color: #363636;
 $secondary-color: #f3f3f3;
 $details: #f5b042;
 $highlighted: #62018f;
+$error: #e00d02;
 
 @mixin margin {
   margin: 1em auto;
