Add github search

--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -3,6 +3,7 @@ $main-color: #000;
 $body-color: #363636;
 $secondary-color: #f3f3f3;
 $details: #f5b042;
+$details-2: #fce7c5;
 $highlighted: #62018f;
 $error: #e00d02;
 
