--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -2,9 +2,15 @@
 
 .navigation {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin: 1% auto;
+  @media screen and (min-width: 600px) {
+    flex-direction: row;
+  }
   &__link{
+    display: flow-root;
     padding: 0.5em 1em;
     font-size: 1.2em;
     font-weight: 800;
@@ -12,6 +18,9 @@
     transition: .3s ease-in-out;
     &--active {
       border-bottom: 2px solid $details;
+    }
+    @media screen and (min-width: 600px) {
+      flex-direction: row;
     }
   }
 }
