--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -53,6 +53,22 @@
     color: $error;
     font-size: 0.8em;
   }
+  &__commit {
+    margin-left: 3em;
+    padding: 0.3em 0 0.3em 1em;
+    border-left: 2px solid $details;
+    &::before {
+      content: '';
+      position: absolute;
+      width: 0.5em;
+      height: 0.5em;
+      background: $details;
+      border-radius: 50%;
+      top: 50%;
+      transform: translateY(-50%);
+      left: calc(-0.25em - 1px);
+    }
+  }
 }
 
 .section {
